Fix text-align Webkit

--- a/css/style.css
+++ b/css/style.css
@@ -247,7 +247,7 @@ PROPIEDADES CATALOGO
 #banner-catalogo ul.filter_cat li a:hover{background:#ffffff;-webkit-transition: all 0.4s ease-in-out;-moz-transition: all 0.4s ease-in-out;-o-transition: all 0.4s ease-in-out;transition: all 0.4s ease-in-out}
 #banner-catalogo ul.filter_cat li.active a{background:#ffffff;}
 
-#selectores-filtros{height:50px;text-align:right;}
+#selectores-filtros{height:50px;text-align:right;text-align:-webkit-right;}
 #selectores-filtros a{color:#7d7974;font-size:14px;font-family:'sofia-pro-black', Helvetica, sans-serif;margin-right:50px;position:relative;top:12px;}
 #selectores-filtros a:before{content:'';display:inline-block;width:21px;height:21px;background-image:url(../img/ico-filter.png);background-size:21px;vertical-align:middle;margin-right:20px;background-position:0px 0px;background-repeat:no-repeat;}
 #selectores-filtros a.active:before{background-position:0px -21px;}
